Refactor user mapping in account summaries
- Simplify user retrieval using Optional to handle null values
- Replace explicit stream collector with static import for clarity
- Add SKILL.md to document new Java 21 sequenced collections